attempt two to script change

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start:dev": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
     "start": "npm run build && cd server && node server.js",
     "server": "cd server nodemon server.js --ignore client",
-    "build": "webpack --mode production",
+    "build": "webpack --config webpack.config.js",
     "install": "cd server && npm i && cd ../client && npm i",
     "client": "cd client && npm start"
   },
